[tool.poetry]
name = "padlock-manager-python"
version = "0.1.0"
description = ""
authors = ["Patrick Bonnell <patrick.bonnell@verafin.com>"]
readme = "README.md"
packages = [{include = "padlock_manager_python"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
